--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -1,6 +1,7 @@
 /* Css Files */
 @import (less) "./../../bower_components/datatables/media/css/jquery.dataTables.css";
 @import (less) "./../../bower_components/bootstrap/dist/css/bootstrap.css";
+@import (less) "./../../bower_components/bootstrap-fileinput/css/fileinput.css";
 @import (less) "./../../bower_components/font-awesome/css/font-awesome.css";
 @import (less) "./../../bower_components/datatables/media/css/dataTables.bootstrap.css";
 
