--- a/config/theme/css/datatables-theme.css
+++ b/config/theme/css/datatables-theme.css
@@ -2,7 +2,7 @@
 * @Author: JB Stoker
 * @Date:   2016-01-20
 * @Last Modified by:   JB Stoker
-* @Last Modified time: 2016-01-20
+* @Last Modified time: 2016-02-03
 */
 /* Datatable Theme Styling */
 .dataTables_wrapper .dataTables_paginate {
@@ -81,6 +81,42 @@ table.dataTable thead .sorting {
 
 table.dataTable td {
   vertical-align: middle !important;
+}
+
+.table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
+    padding: 8px;
+    line-height: 1.4;
+    vertical-align: middle!important;
+    border-top: 1px solid #dddddd;
+}
+
+
+.st0{
+  fill:#ffffff;
+}
+td.details-control {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    content: '';
+    background: url('/images/cd-arrow.svg') no-repeat center center;
+    fill:#000000 !important;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+    content: '';
+    background: url('/images/cd-arrow.svg') no-repeat center center;
+    fill:#000000 !important;
+    cursor: pointer;
 }
 
 /* End Datatables */
