--- a/config/theme/css/theme.css
+++ b/config/theme/css/theme.css
@@ -120,6 +120,11 @@ footer{
 .jumbotron h5 {
     color: #ffffff !important;
 }
+.modal-dialog {
+  position: relative;
+  width: 90%!important;
+  margin: 10px auto;
+}
 /* -------------------------------- 
 Main Page Content
 -------------------------------- */
@@ -619,7 +624,8 @@ Sidebar
         -ms-transform: translateY(-50%);
          -o-transform: translateY(-50%);
             transform: translateY(-50%);
-    background: url(/images/cd-arrow.svg);
+    background: url(/images/cd-arrow-white.svg);
+    fill:#ffffff!important;
 }
 .dropdown.open > a::after
 {
@@ -644,7 +650,8 @@ Sidebar
         -ms-transform: translateY(-50%);
          -o-transform: translateY(-50%);
             transform: translateY(-50%);
-    background: url(/images/cd-arrow.svg);
+    background: url(/images/cd-arrow-white.svg);
+    fill:#ffffff!important;
 }
 .has-children.selected > ul
 {
@@ -1178,7 +1185,8 @@ Sidebar
             -ms-transform: translateY(-50%);
              -o-transform: translateY(-50%);
                 transform: translateY(-50%);
-        background: url(/images/cd-arrow.svg);
+        background: url(/images/cd-arrow-white.svg);
+        fill:#ffffff!important;
     }
     .cd-side-nav > ul > li > a
     {
@@ -1468,6 +1476,7 @@ Sidebar
             -ms-transform: translateY(-50%);
              -o-transform: translateY(-50%);
                 transform: translateY(-50%);
-        background: url(/images/cd-arrow.svg);
+        background: url(/images/cd-arrow-white.svg);
+        fill:#ffffff!important;
     }
 }
