--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,13 +1,13 @@
 <div class="container">
         <div class="row">
-            <button class="btn btn-sm btn-warning" id="saveChanges">Save Changes</button> <input type="checkbox" class="input-sm" data-height="30px" data-toggle="toggle" data-on="<svg class='icon-edit-3'><use xlink:href='/fonts/icons.svg#icon-edit-3'></use></svg>" data-off="<svg class='icon-preview-1'><use xlink:href='/fonts/icons.svg#icon-preview-1'></use></svg>" data-offstyle="primary" data-size="mini" data-style="pull-right icon-toggle" data-onstyle="warning" id="editProfile"/>
+            <button class="btn btn-sm btn-warning" id="saveChanges">Save Changes</button> <input type="checkbox" class="input-sm" data-height="30px" data-toggle="toggle" data-on="<svg style='height:20px' class='icon-edit-3'><use xlink:href='/fonts/icons.svg#icon-edit-3'></use></svg>" data-off="<svg style='height:20px' class='icon-preview-1'><use xlink:href='/fonts/icons.svg#icon-preview-1'></use></svg>" data-offstyle="primary" data-size="mini" data-style="pull-right icon-toggle" data-onstyle="warning" id="editProfile"/>
         </div>
     <div class="row">     
       <div class="col-md-4">
-      <div class="row"  id="profile-image">
+      <div class="row" id="profile-image">
         <img class="img-thumbnail img-responsive" src="http://placehold.it/400x400"/>
       </div>
-      <div class="row"  id="profile-quote">
+      <div class="row" id="profile-quote">
         <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</blockquote>
       </div>
       
