--- a/views/user/settings.hbs
+++ b/views/user/settings.hbs
@@ -3,7 +3,6 @@
         <ul class="cd-tabs-navigation">
             <li><a data-content="global" class="selected" href="#0"><svg class="icon-user-setting-2"><use xlink:href="/fonts/icons.svg#icon-user-setting-2"></use></svg><span class="cd-tab-text">Global<span/></a></li>
             <li><a data-content="password" href="#0"><svg class="icon-key-1"><use xlink:href="/fonts/icons.svg#icon-key-1"></use></svg><span class="cd-tab-text">Access<span/></a></li>
-            <li><a data-content="media" href="#0"><svg class="icon-photos-2"><use xlink:href="/fonts/icons.svg#icon-photos-2"></use></svg><span class="cd-tab-text">Media<span/></a></li>
         </ul> <!-- cd-tabs-navigation -->
     </nav>
 
@@ -40,11 +39,11 @@
                         <div class="form-group">
                             <label for="newname" class="control-label col-md-2">New Name</label>
                             <div class="col-md-10">
-                                <input type="text" class="form-control" name="newname" id="newname" placeholder="New Password" autocomplete="off"><br>
+                                <input type="text" class="form-control" name="newname" id="newname" placeholder="New Name" autocomplete="off"><br>
                             </div>
                         </div>
                         <div  class="row">
-                            <input type="submit" class="pull-right btn btn-primary btn-load" data-loading-text="Changing Password..." value="Change Password">
+                            <input type="submit" class="pull-right btn btn-primary btn-load" data-loading-text="Changing Login Name..." value="Change Login Name">
                         </div>
                     </form>
                     </div>
@@ -93,100 +92,6 @@
                     </div>
                 </div>
             </div>
-            </div>
-        </li>
-        <li data-content="media">
-            <div class="col-md-12 well">
-            <legend>Add Media</legend>
-            <div class="row">
-                <label class="control-label">Select File</label>
-                <input id="mediaUploader" name="mediaUploader[]" type="file" class="file-loading" multiple="true">
-            </div>
-            </div>
-            <div class="col-md-12">
-            <legend>Media Library</legend>
-            <div class="row">
-                <div class="btn-group pull-right">
-                  <button type="button" class="btn btn-primary"><svg fill="#ffffff" class="icon-gramophone"><use xlink:href="/fonts/icons.svg#icon-gramophone"></use></svg></button>
-                  <button type="button" class="btn btn-primary"><svg fill="#ffffff" class="icon-video-camera-1"><use xlink:href="/fonts/icons.svg#icon-video-camera-1"></use></svg></button>
-                  <button type="button" class="btn btn-primary"><svg fill="#ffffff" class="icon-photo-frame"><use xlink:href="/fonts/icons.svg#icon-photo-frame"></use></svg></button>
-                  <button type="button" class="btn btn-primary"><svg fill="#ffffff" class="icon-file-list"><use xlink:href="/fonts/icons.svg#icon-file-list"></use></svg></button>
-                </div>
-            </div>
-            <ul class="row mediagallery">
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-174908-rocking-the-night-away-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-287182-blah-blah-blah-yellow-road-sign-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-460760-colors-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-461673-retro-party-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-514834-touchscreen-technology-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-916206-legal-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-1062948-nature-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-1471528-insant-camera-kid-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-2255072-relaxed-man-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-2360379-colors-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-2360571-jump-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-2361384-culture-for-business-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-2441670-spaghetti-with-tuna-fish-and-parsley-s.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-2943363-budget-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-3444921-street-art-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-3552322-insurance-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-3807845-food-s.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-3835655-down-office-worker-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-4619216-ui-control-knob-regulators-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-5771958-health-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-268693-businesswoman-using-laptop-outdoors-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-352207-search-of-code-s.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-247190-secret-email-xs.jpg">
-            </li>
-            <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive img-polaroid" src="images/photodune-682990-online-search-xs.jpg">
-            </li>
-          </ul>      
             </div>
         </li>
     </ul> <!-- cd-tabs-content -->
